Add statics part

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -2,6 +2,7 @@
 @import "./pagination";
 @import "./dropdownList";
 @import "./nodeList";
+@import "./card";
 
 @background: #202129;
 @text: #FEFEFE;
