--- a/html/styles/card.less
+++ b/html/styles/card.less
@@ -1,10 +1,12 @@
 .card-container {
-    margin: 50px auto;
+    // margin: 50px auto;
     width:226px;
     height:264px;
+    display: inline-block;
     background:rgba(50,51,60,1);
     border-radius:4px;
     padding: 16px;
+    margin-bottom: 14px;
     .card-header {
         img {
             width: 26px;
