Add activities part

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -246,6 +246,7 @@ body {
             background:rgba(41,42,50,1);
             border-radius:4px;
             padding: 32px 16px 24px;
+            margin-bottom: 21px;
             .main-title {
                 margin-bottom: 28px;
             }
@@ -284,6 +285,65 @@ body {
             }
             .percent-note {
                 margin-bottom: 32px;
+            }
+        }
+        .activities {
+            height:778px;
+            background:rgba(41,42,50,1);
+            border-radius:4px;
+            padding: 32px 16px 24px;
+            .node-list {
+                height: 628px;
+                overflow-y: scroll;
+                .item {
+                    height: 133px;
+                    .left {
+                        float: left;
+                        img {
+                            width: 30px;
+                            height: 30px;
+                            margin-bottom: 8px;
+                        }
+                        p {
+                            width:4px;
+                            height:84px;
+                            background:rgba(68,72,81,1);
+                            margin-left: 12px;
+                        }
+                    }
+                    .right {
+                            font-size:15px;
+                            font-weight:400;
+                            color:rgba(161,166,173,1);
+                            line-height:22px;
+                            margin-left: 46px;
+                        .line2 {
+                            font-weight:600;
+                            margin: 2px 0 5px;
+                            color:rgba(255,255,255,1);
+                        }
+                        .line3 {
+                            width:83px;
+                            height:20px;
+                            background:rgba(68,72,81,1);
+                            border-radius:4px;
+                            line-height:16px;
+                            padding: 2px 8px;
+                        }
+                    }
+                }
+            }
+            .view-all {
+                width:242px;
+                height:28px;
+                display: inline-block;
+                margin: 0 auto;
+                background:rgba(39,65,8,1);
+                border-radius:4px;
+                border:1px solid rgba(161,252,58,1);
+                text-align: center;
+                padding: 5px 0px;
+                margin-top: 12px;
             }
         }
     }
