Add Hardware Specifications

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -292,6 +292,7 @@ body {
             background:rgba(41,42,50,1);
             border-radius:4px;
             padding: 32px 16px 24px;
+            margin-bottom: 21px;
             .node-list {
                 height: 628px;
                 overflow-y: scroll;
@@ -344,6 +345,27 @@ body {
                 text-align: center;
                 padding: 5px 0px;
                 margin-top: 12px;
+            }
+        }
+        .specifications {
+            height:500px;
+            background:rgba(41,42,50,1);
+            border-radius:6px;
+            padding: 32px 16px 24px;
+            .main-title {
+                margin-bottom: 28px;
+            }
+            section {
+                padding: 16px 0;
+                font-size:15px;
+                font-weight:600;
+                color:rgba(255,255,255,1);
+                line-height:22px;
+                border-bottom: 1px solid rgba(68,72,81,1);
+                .name {
+                    font-weight:400;
+                    color:rgba(161,166,173,1);
+                }
             }
         }
     }
