Add line charts

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -3,7 +3,7 @@
 @import "./dropdownList";
 @import "./nodeList";
 @import "./card";
-
+@import "./linemarkcard.less";
 @background: #202129;
 @text: #FEFEFE;
 @border: #444851;
