--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -293,6 +293,14 @@ body {
             border-radius:4px;
             padding: 32px 16px 24px;
             margin-bottom: 21px;
+            position: relative;
+            .transparent-bg {
+                width:242px;
+                height:90px;
+                background:linear-gradient(180deg,rgba(41,42,50,0) 0%,rgba(41,42,50,1) 100%);
+                position: absolute;
+                bottom: 54px;
+            }
             .node-list {
                 height: 628px;
                 overflow-y: scroll;
