Add nodes graph

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -378,3 +378,18 @@ body {
         }
     }
 }
+
+/* style of nodes graph----------------------------------------------*/
+#nodesGraph {
+    display: inline-block;
+    width:738px;
+    height:500px;
+    background:rgba(50,51,60,1);
+    border-radius:6px;
+    .ip {
+        font-size:12px;
+        font-weight:400;
+        color:rgba(255,255,255,1);
+        line-height:17px;
+    }
+}
