--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -4,6 +4,7 @@
 @import "./nodeList";
 @import "./card";
 @import "./linemarkcard.less";
+@import "./headLine.less";
 @background: #202129;
 @text: #FEFEFE;
 @border: #444851;
