--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -3,8 +3,9 @@
 @import "./dropdownList";
 @import "./nodeList";
 @import "./card";
-@import "./linemarkcard.less";
-@import "./headLine.less";
+@import "./headLine";
+@import "./linemarkcard";
+@import "./nodesGraph";
 @background: #202129;
 @text: #FEFEFE;
 @border: #444851;
@@ -377,20 +378,5 @@ body {
                 }
             }
         }
-    }
-}
-
-/* style of nodes graph----------------------------------------------*/
-#nodesGraph {
-    display: inline-block;
-    width:738px;
-    height:500px;
-    background:rgba(50,51,60,1);
-    border-radius:6px;
-    .ip {
-        font-size:12px;
-        font-weight:400;
-        color:rgba(255,255,255,1);
-        line-height:17px;
     }
 }
