--- a/html/styles/card.less
+++ b/html/styles/card.less
@@ -29,11 +29,11 @@
         background:rgba(41,42,50,1);
         border-radius:4px;
         margin-bottom: 4px;
-        padding: 4px 8px;
+        padding: 4px 6px;
         div {
             background:rgba(41,42,50,1);
             height:10px;
-            width: 50%;
+            width: 100%;
             background-image: repeating-linear-gradient(90deg,rgba(161,252,58,1),rgba(161,252,58,1) 1px,transparent 2px,transparent 6px);
         }
     }
@@ -67,4 +67,43 @@
         }
     }
 
+}
+
+.null-card {
+    .percent-bar {
+        div {
+            width: 0;
+        }
+    }
+    .parameters {
+        font-size:15px;
+        font-weight:400;
+        color:rgba(161,166,173,1);
+        line-height:22px;
+        padding: 12px;
+        width:194px;
+        height:108px;
+        border-radius:4px;
+        border:1px dashed rgba(68,72,81,1);
+    }
+}
+.card-container {
+    .null-bar {
+        div {
+            width: 0;
+        }
+    }
+    .parameters {
+        .param-item.null-param  {
+            .point {
+                background:rgba(71,72,86,1);
+            }
+            .param-name {
+                color:rgba(161,166,173,1);
+            }
+            .param-value {
+                color:rgba(71,72,86,1);
+            }
+        }
+    }
 }
