Add hardware specifications

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -355,6 +355,9 @@ body {
                 text-align: center;
                 padding: 5px 0px;
                 margin-top: 12px;
+                font-size:15px;
+                font-weight:400;
+                color:rgba(254,254,254,1);
             }
         }
         .specifications {
