Add data for Activities part

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -335,6 +335,7 @@ body {
                             border-radius:4px;
                             line-height:16px;
                             padding: 2px 8px;
+                            text-align: center;
                         }
                     }
                 }
