Add info of less file

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -208,6 +208,7 @@ body {
     }
 }
 
+/****** style of Simulations & Activities & Hardware Specifications ******/
 .bottom-group {
     width: 1080px;
     margin: 20px auto;
