--- a/html/styles/linemarkcard.less
+++ b/html/styles/linemarkcard.less
@@ -76,7 +76,8 @@
     bottom: 20px;
     transform-origin: right bottom;
     transform: rotate(45deg);
-    left: 30px;
+    left: 30px;;
+    transition:1s;
   }
 
   .layer {
