Improve clickable area of language option

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -135,7 +135,8 @@ body {
                 }
                 .list-block{
                     li>span{
-                        padding: 16px 0;
+                        display: inline-block;
+                        width: 100%;
                     }
                     .fa-globe-americas{
                         color: #1E2328;
