--- a/html/styles/nodeList.less
+++ b/html/styles/nodeList.less
@@ -281,18 +281,25 @@ a.ant-calendar-year-panel-year:hover{
         position: absolute;
         z-index: 9;
         background:rgba(46,50,60,1);
-        border-radius:0 0 4px 4px;
+        border-radius:4px;
         width:100%;
         border:1px solid rgba(68,72,81,1);
         border-top:none;
+        top:40px;
         p{
             font-size:15px;
             font-weight:400;
             color:rgba(218,225,233,1);
-            line-height:38px;
-            height:38px;
+            line-height:36px;
+            height:36px;
             padding-left:16px;
             cursor: pointer;
+            border:1px solid rgba(46,50,60,1);
+        }
+        p:hover{
+            background:rgba(161,252,58,0.16);
+            border:1px solid rgba(161,252,58,1);
+            color:rgba(161,252,58,1);
         }
     }
     
