--- a/html/styles/linemarkcard.less
+++ b/html/styles/linemarkcard.less
@@ -3,7 +3,7 @@
   height: 584px;
   background: rgba(41, 42, 50, 1);
   border-radius: 4px;
-  margin:20px 0;
+  margin: 20px 0;
 }
 .lineMark-title {
   padding: 32px;
@@ -75,8 +75,8 @@
     bottom: 20px;
     transform-origin: right bottom;
     transform: rotate(45deg);
-    left: 30px;;
-    transition:1s;
+    left: 30px;
+    transition: 1s;
   }
 
   .layer-item {
@@ -95,7 +95,6 @@
     font-weight: 600;
     color: rgba(255, 255, 255, 1);
     line-height: 30px;
-    position: relative;
     position: absolute;
     bottom: 20px;
     left: 47%;
