Fix header language selector style

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -124,6 +124,9 @@ body {
                     >a>i:last-child{
                         margin-left: 28px;
                     }
+                    >a{
+                        padding: 24px 16px;
+                    }
                 }
                 img {
                     display: inline-block;
