--- a/html/styles/nodesGraph.less
+++ b/html/styles/nodesGraph.less
@@ -76,7 +76,18 @@
                     font-weight:400;
                     color:rgba(161,166,173,1);
                     line-height:22px;
-                    width: 60px;
+                    width: 92px;
+                    .trend {
+                        display: inline-block;
+                        width: 15px;
+                        margin-left: 4px;
+                    }
+                    .trend.up{
+                        background-image: url('../img/arrow-alt-circle-up-solid.svg');
+                    }
+                    .trend.down{
+                        background-image: url('../img/arrow-alt-circle-down-solid.svg');
+                    }
                 }
 
                 .value {
@@ -85,33 +96,51 @@
                     font-weight:600;
                     color:rgba(255,255,255,1);
                     line-height:22px;
-                    width: 60px;
-                    .circle{
+                    width: 92px;
+                    .circle {
                         display: inline-block;
                         border-radius: 50%;
                         width:10px;
                         height:10px;
-                        &.green {
-                            background:rgba(161,252,58,0.43);
-                            border:1px solid rgba(161,252,58,1);
-                        }
-                        &.red {                        
-                            background:rgba(255,0,117,0.2);
-                            border:1px solid rgba(255,0,117,1);
-                        }
+                        margin-left: 8px;
+                        background:rgba(161,252,58,0.43);
+                        border:1px solid rgba(161,252,58,1);
                     }
                 }
-                
                 .value:nth-child(4),
-                .label:first-child{
-                    width: 125px;
-                }
-                .value:nth-child(5),
                 .label:nth-child(2){
-                    width: 65px;
+                    width: 132px;
+                    margin-left: 24px;
                 }
             }
 
+            li.problem{
+                .value{
+                    font-size:15px;
+                    font-weight:600;
+                    color:rgba(255,0,117,1);
+                    line-height:22px;
+                }
+                .circle {                        
+                    background:rgba(255,0,117,0.2);
+                    border:1px solid rgba(255,0,117,1);
+                }
+            }
+            li.premium{
+                .value:nth-child(3){
+                    background:rgba(161,252,58,0.3);
+                    border-radius:4px;
+                    border:1px solid rgba(161,252,58,1);
+                    color:rgba(161,252,58,1);
+                    padding: 1px 8px;
+                    position: relative;
+                    &:after{
+                        content:"PREM.";
+                        position: absolute;
+                        right: 6px;
+                    }
+                }
+            }
             li:first-child {
                 padding: 0 0 12px 0;
             }            
