Update the style of tran-generate

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -230,16 +230,18 @@
                         margin-right: 4px;  
                         vertical-align:middle;
                     }
-                    span {
+                    a {
                         font-size:15px;
                         font-weight:500;
                         color:rgba(71,72,86,1);
                         line-height:22px;
+                        display: inline-block;
+                        width: 215px;
                     }
                 }
                 
                 .check-btn.success {
-                    span {
+                    a {
                         color:rgba(161,252,58,1);
                     }
                 }
