Fix rank trending mark

--- a/html/styles/nodesGraph.less
+++ b/html/styles/nodesGraph.less
@@ -81,6 +81,8 @@
                         display: inline-block;
                         width: 15px;
                         margin-left: 4px;
+                        height: 15px;
+                        vertical-align: middle;
                     }
                     .trend.up{
                         background-image: url('../img/arrow-alt-circle-up-solid.svg');
