--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -247,6 +247,151 @@
                 }
  
             }
+
+            .modal-layer {
+                // display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.8);
+                z-index: 1999;
+                color: #CACBD6;
+                .close-btn {
+                    position: absolute;
+                    right:-43px;
+                    top: 0;
+                    cursor: pointer;
+                    img{
+                        width: 30px;
+                        height: 30px;
+                    }
+                }
+                .modal {
+                    width: 588px;
+                    height: fit-content;
+                    border-radius: 4px;
+                    padding: 48px 36px 36px;
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    margin: auto;
+                    background:rgba(37,38,46,1);
+                    & > h2 {
+                        font-size:28px;
+                        font-weight:300;
+                        color:rgba(161,252,58,1);
+                        line-height:30px;
+                        margin-bottom: 10px;
+                    }
+                    & > p {
+                        font-size:15px;
+                        font-weight:500;
+                        color:rgba(161,166,173,1);
+                        line-height:20px;
+                        margin-bottom: 36px;
+                    }
+                    & > h5 {
+                        font-size:16px;
+                        font-weight:500;
+                        color:rgba(161,166,173,1);
+                        line-height:24px;
+                        margin-bottom: 6px;
+                    }
+                }
+                .detail-modal {
+                    .detail-part1 {
+                        margin-bottom: 36px;
+                        table {
+                            width: 516px;
+                            word-break: break-word;
+                            background:rgba(50,51,60,1);
+                            border-radius:6px;
+                            tr {
+                                border-bottom: 1px solid rgba(68,72,81,1);
+                                td {
+                                    padding: 16px 14px;
+                                    font-size:15px;
+                                    font-weight:500;
+                                    color:rgba(161,166,173,1);
+                                    line-height:22px;
+                                }
+                                td:nth-child(1) {
+                                    width: 33%;
+                                }
+                                td:nth-child(2) {
+                                    width: 66%;
+                                    font-weight:400;
+                                    color:rgba(255,255,255,1);
+                                }
+                            }
+                            tr:last-child {
+                                border: none;
+                            }
+                        }
+                    }
+                   
+                    .detail-part2 {
+                        background:rgba(50,51,60,1);
+                        border-radius:4px;
+                        padding: 7px 16px 30px;
+                        font-size:16px;
+                        font-weight:300;
+                        color:rgba(255,255,255,1);
+                        line-height:24px;
+                    }
+                }
+                .input-modal {
+                    textarea {
+                        width: 100%;
+                        height:130px;
+                        background:rgba(50,51,60,1);
+                        border-radius:4px;
+                        padding: 7px 16px;
+                        outline: none;
+                        font-size:16px;
+                        font-weight:300;
+                        line-height:24px;
+                        color:rgba(255,255,255,1);
+                        margin-bottom: 48px;
+                        resize:none
+                    }
+                    button {
+                        width: 100%;
+                        height:38px;
+                        background:rgba(39,65,8,1);
+                        border-radius:4px;
+                        border:1px solid rgba(161,252,58,1);
+                        font-size:15px;
+                        font-weight:500;
+                        color:rgba(254,254,254,1);
+                        line-height:22px;
+                    }
+                }
+                .error-modal {
+                    width:476px;
+                    height:fit-content;
+                    border-radius:4px;
+                    padding-top: 40px;
+                    & > img {
+                        width:72px;
+                        height:72px;
+                        margin-bottom: 28px;
+                    }
+                    & > h2 {
+                        color:rgba(255,0,117,1);
+                    }
+                    & > p {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+
+          
+           
         }
     }
 }
