Add failure modal

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -302,6 +302,15 @@
                         margin-bottom: 6px;
                     }
                 }
+                .detail-part2 {
+                    background:rgba(50,51,60,1);
+                    border-radius:4px;
+                    padding: 7px 16px 30px;
+                    font-size:16px;
+                    font-weight:300;
+                    color:rgba(255,255,255,1);
+                    line-height:24px;
+                }
                 .detail-modal {
                     .detail-part1 {
                         margin-bottom: 36px;
@@ -332,16 +341,6 @@
                                 border: none;
                             }
                         }
-                    }
-                   
-                    .detail-part2 {
-                        background:rgba(50,51,60,1);
-                        border-radius:4px;
-                        padding: 7px 16px 30px;
-                        font-size:16px;
-                        font-weight:300;
-                        color:rgba(255,255,255,1);
-                        line-height:24px;
                     }
                 }
                 .input-modal {
@@ -388,6 +387,15 @@
                         margin-bottom: 0;
                     }
                 }
+                .fail-modal {
+                    & > p {
+                        margin-bottom: 36px;
+                    }
+                    .detail-part2.top {
+                        margin-bottom: 24px;
+                    }
+                }
+
             }
 
           
