Update the text

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -368,6 +368,7 @@
                         font-weight:500;
                         color:rgba(254,254,254,1);
                         line-height:22px;
+                        outline: none;
                     }
                 }   
                 .error-modal {
