--- a/html/styles/nodeList.less
+++ b/html/styles/nodeList.less
@@ -89,6 +89,14 @@
             border-radius: 6px;
         }
     }
+    td.activity-groupName{
+        img{
+            width:22px;
+            height:22px;
+            margin-right:4px;
+            vertical-align: middle;
+        }
+    }
 }
 .ant-calendar{
     color: rgba(161,166,173,1);
