Modify unit display

--- a/html/styles/linemarkcard.less
+++ b/html/styles/linemarkcard.less
@@ -100,14 +100,14 @@
     left: 47%;
   }
 
-  .num::after {
-    content: "TPS";
-    position: absolute;
-    top: -2px;
-    right: -40px;
-    font-size: 15px;
-    font-weight: 400;
-    color: rgba(161, 166, 173, 1);
-    line-height: 22px;
-  }
+  // .num::after {
+  //   content: "TPS";
+  //   position: absolute;
+  //   top: -2px;
+  //   right: -40px;
+  //   font-size: 15px;
+  //   font-weight: 400;
+  //   color: rgba(161, 166, 173, 1);
+  //   line-height: 22px;
+  // }
 }
