--- a/html/styles/nodesGraph.less
+++ b/html/styles/nodesGraph.less
@@ -108,6 +108,10 @@
                         background:rgba(161,252,58,0.43);
                         border:1px solid rgba(161,252,58,1);
                     }
+                    .circle.red {
+                        background:rgba(255,0,117,0.2);
+                        border:1px solid rgba(255,0,117,1);
+                    }
                 }
                 .value:nth-child(4),
                 .label:nth-child(2){
@@ -122,10 +126,6 @@
                     font-weight:600;
                     color:rgba(255,0,117,1);
                     line-height:22px;
-                }
-                .circle {                        
-                    background:rgba(255,0,117,0.2);
-                    border:1px solid rgba(255,0,117,1);
                 }
             }
             li.premium{
