Update the time

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -211,6 +211,14 @@
                         font-weight:400;
                         color:rgba(161,166,173,1);
                         margin-bottom: 8px;
+                        img {
+                            width:14px;
+                            height:22px;
+                            color:rgba(161,166,173,1);
+                            margin-right: 6px;
+                            vertical-align: middle;
+                            margin-top: -4px;
+                        }
                     }
                     .tran-hint {
                         font-weight:600;
