--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -45,7 +45,7 @@ html,
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif; // font-family: PingFangSC-Regular;
     font-weight: normal;
-    user-select: none;
+    // user-select: none;
     background-color: @background;
     color: @text;
     font-size: 14px;
