Cancel transitions to reduce cpu usage

--- a/html/styles/nodesGraph.less
+++ b/html/styles/nodesGraph.less
@@ -57,8 +57,9 @@
 
     .hostlist-contaniner{        
         width: 258px;
-        display: inline-block;
-        margin-left: 20px;
+        // display: inline-block;
+        // margin-left: 20px;
+        float: right;
         position: relative;
 
         .host-list {
