--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -255,7 +255,38 @@
                 }
  
             }
-
+            .search-group {
+                padding-top: 16px;
+                margin-top: 18px;
+                border-top: 1px solid rgba(71,72,86,1);
+                >form {
+                    float: left;
+                    margin-bottom: 24px;
+                    width:100%;
+                    .searchkey {
+                        float: left;
+                        width:216px;
+                        height: 36px;
+                        border-radius: 4px;
+                        border: 1px solid rgba(68, 72, 81, 1);
+                        background-color: transparent;
+                        color: #fff;
+                        padding: 0 10px;
+                    }
+                    .nodelist-search {
+                        float: right;
+                        width:36px;
+                        height:36px;
+                        border-radius: 4px;
+                        border: 1px solid rgba(161, 252, 58, 1);
+                        margin-left: 6px;
+                        background: rgba(39, 65, 8, 1) url('../img/icon/button_icon/search.png') no-repeat center;
+                        i {
+                            color: #fff;
+                        }
+                    }
+                }
+            }
             .modal-layer {
                 // display: none;
                 position: fixed;
@@ -288,6 +319,10 @@
                     left: 50%;
                     margin: auto;
                     transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%); 	/* IE 9 */
+                    -moz-transform: translate(-50%, -50%); 	/* Firefox */
+                    -webkit-transform: translate(-50%, -50%); /* Safari 和 Chrome */
+                    -o-transform: translate(-50%, -50%); 	/* Opera */
                     background:rgba(37,38,46,1);
                     & > h2 {
                         font-size:28px;
@@ -319,6 +354,7 @@
                     font-weight:300;
                     color:rgba(255,255,255,1);
                     line-height:24px;
+                    word-break: break-word;
                 }
                 .detail-modal {
                     .detail-part1 {
@@ -348,6 +384,40 @@
                             }
                             tr:last-child {
                                 border: none;
+                            }
+                        }
+                        .copy-btn {
+                            cursor: pointer;
+                            img {
+                                width:14px;
+                                height:22px;
+                                margin-right: 4px;
+                                vertical-align: middle;
+                            }
+                            span {
+                                font-size:15px;
+                                font-weight:500;
+                                color:rgba(161,252,58,1);
+                                line-height:22px;
+                            }
+                        }
+                        .id-hint {
+                            height:77px;
+                            background:rgba(37,38,46,1);
+                            border-radius:6px;
+                            padding: 6px 8px;
+                            margin-top: 12px;
+                            img {
+                                width:15px;
+                                height:22px;
+                                vertical-align: top;
+                                margin-right: 6px;
+                            }
+                            span {
+                                width:245px;
+                                height:65px;
+                                display: inline-block;
+                                color:rgba(161,166,173,1);
                             }
                         }
                     }
@@ -412,20 +482,20 @@
 
           
             .modal-layer-enter {
-                opacity: 0.01;
+                opacity: 0.5;
                 // transform: translateY(-100%) scale(0.75);
             }
             .modal-layer-enter-active {
                 opacity: 1;
                 // transform: translateY(0%) scale(1.25);
-                transition: all 300ms ease-out;
+                transition: all 100ms ease-out;
             }
             .modal-layer-exit {
                 opacity: 1;
             }
             .modal-layer-exit-active {
                 opacity: 0;
-                transition: all 300ms ease-in;
+                transition: all 200ms ease-in;
             }
         }
     }
