Fix some details

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -281,6 +281,8 @@
                         border: 1px solid rgba(161, 252, 58, 1);
                         margin-left: 6px;
                         background: rgba(39, 65, 8, 1) url('../img/icon/button_icon/search.png') no-repeat center;
+                        outline: none;
+                        cursor: pointer;
                         i {
                             color: #fff;
                         }
@@ -402,7 +404,7 @@
                             }
                         }
                         .id-hint {
-                            height:77px;
+                            height:62px;
                             background:rgba(37,38,46,1);
                             border-radius:6px;
                             padding: 6px 8px;
@@ -414,8 +416,8 @@
                                 margin-right: 6px;
                             }
                             span {
-                                width:245px;
-                                height:65px;
+                                width:278px;
+                                height: 50px;
                                 display: inline-block;
                                 color:rgba(161,166,173,1);
                             }
