Fix header a tag style

--- a/html/styles/common.less
+++ b/html/styles/common.less
@@ -91,6 +91,7 @@ body {
                     color: #A1A6AD;
                     display: inline-block;
                     padding: 28px 16px;
+                    text-decoration: none;
                 }
                 a.active {
                     color: #FEFEFE;
