--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -258,10 +258,12 @@
             .search-group {
                 padding-top: 16px;
                 margin-top: 18px;
+                margin-bottom: 24px;
                 border-top: 1px solid rgba(71,72,86,1);
+                overflow: hidden;
                 >form {
                     float: left;
-                    margin-bottom: 24px;
+                    margin-bottom: 8px;
                     width:100%;
                     .searchkey {
                         float: left;
@@ -287,6 +289,12 @@
                             color: #fff;
                         }
                     }
+                }
+                .query-info {
+                    font-size:15px;
+                    font-weight:400;
+                    color:rgba(255,0,117,1);
+                    line-height:22px;
                 }
             }
             .modal-layer {
