--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -317,6 +317,12 @@
                         height: 30px;
                     }
                 }
+                .mask {
+                    width: 100%;
+                    height: 100%;
+                    position: relative;
+                    z-index: -555;
+                }
                 .modal {
                     width: 588px;
                     height: fit-content;
@@ -364,16 +370,19 @@
                     font-weight:300;
                     color:rgba(255,255,255,1);
                     line-height:24px;
-                    word-break: break-word;
+                    word-break: break-all;
+                    word-wrap: break-word;
                 }
                 .detail-modal {
                     .detail-part1 {
                         margin-bottom: 36px;
                         table {
                             width: 516px;
-                            word-break: break-word;
                             background:rgba(50,51,60,1);
                             border-radius:6px;
+                            border-collapse: collapse;
+                            table-layout:fixed;
+                            word-break: break-all;
                             tr {
                                 border-bottom: 1px solid rgba(68,72,81,1);
                                 td {
