Add null condition

--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -453,11 +453,19 @@
                         font-weight:300;
                         line-height:24px;
                         color:rgba(255,255,255,1);
-                        margin-bottom: 48px;
                         resize:none
+                    }
+                    .send-hint {
+                        font-size:15px;
+                        font-weight:400;
+                        color:rgba(255,0,117,1);
+                        line-height:22px;
+                        margin-top: 8px;
+                        margin-bottom: 0px;
                     }
                     button {
                         width: 100%;
+                        margin-top: 48px;
                         height:38px;
                         background:rgba(39,65,8,1);
                         border-radius:4px;
