--- a/app_views/templates/index.html
+++ b/app_views/templates/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="format-detection" content="telephone=no">
 	{% comment %}<meta http-equiv="Content-Security-Policy" content="object-src 'none';child-src https:">{% endcomment %}
 	<title>Trias Web</title>
 	<link rel="shortcut icon" href="/static/bundles/favicon.ico" type="image/x-icon">
