--- a/html/styles/bottomgroup.less
+++ b/html/styles/bottomgroup.less
@@ -370,7 +370,7 @@
                     font-weight:300;
                     color:rgba(255,255,255,1);
                     line-height:24px;
-                    word-break: break-all;
+                    word-break: break-word;
                     word-wrap: break-word;
                 }
                 .detail-modal {
